git-annex (5.20150714) UNRELEASED; urgency=medium

  * Improve bash completion code so that "git annex" will also tab
    complete. However, git's bash completion script needs a patch,
    which I've submitted, for this to work prefectly.

 -- Joey Hess <id@joeyh.name>  Thu, 16 Jul 2015 14:55:07 -0400

git-annex (5.20150713) unstable; urgency=medium

  * Switched option parsing to use optparse-applicative. This was a very large
    and invasive change, and may have caused some minor behavior changes to
    edge cases of option parsing. (For example, the metadata command no
    longer accepts the combination of --get and --set, which never actually
    worked.)
  * Bash completion code is built-in to git-annex, and can be enabled by
    running: source <(git-annex --bash-completion-script git-annex)
  * Debian package (and any other packages built using make install)
    now includes bash completion.
  * version --raw now works when run outside a git repository.
  * assistant --startdelay now works when run outside a git repository.
  * dead now accepts multiple --key options.

 -- Joey Hess <id@joeyh.name>  Fri, 10 Jul 2015 16:36:42 -0400

git-annex (5.20150710) unstable; urgency=medium

  * add: Stage symlinks the same as git add would, even if they are not a
    link to annexed content.
  * sync: When annex.autocommit=false, avoid making any commit of local
    changes, while still merging with remote to the extent possible.
  * unused: --used-refspec can now be configured to look at refs in the
    reflog. This provides a way to not consider old versions of files to be
    unused after they have reached a specified age, when the old refs in
    the reflog expire.
  * log: Fix reversion introduced in version 5.20150528 that broke this command.
  * assistant --autostart: First stop any daemons that are already running,
    which might be left over from a previous login session and so unable to
    use the ssh agent of a new login session.